syntax = "proto3";

package com.livemart.product;

option java_multiple_files = true;
option java_package = "com.livemart.product.grpc.proto";

// 상품 조회 서비스 (gRPC)
service ProductGrpcService {

  // 단건 상품 조회
  rpc GetProduct (GetProductRequest) returns (ProductResponse);

  // 상품 목록 조회 (서버 스트리밍)
  rpc GetProductsByIds (GetProductsByIdsRequest) returns (stream ProductResponse);

  // 재고 확인
  rpc CheckStock (CheckStockRequest) returns (CheckStockResponse);

  // 재고 차감
  rpc DeductStock (DeductStockRequest) returns (DeductStockResponse);
}

message GetProductRequest {
  int64 product_id = 1;
}

message GetProductsByIdsRequest {
  repeated int64 product_ids = 1;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock_quantity = 5;
  string category_name = 6;
  string status = 7;
  string image_url = 8;
  int64 seller_id = 9;
}

message CheckStockRequest {
  int64 product_id = 1;
  int32 required_quantity = 2;
}

message CheckStockResponse {
  bool available = 1;
  int32 current_stock = 2;
}

message DeductStockRequest {
  int64 product_id = 1;
  int32 quantity = 2;
}

message DeductStockResponse {
  bool success = 1;
  int32 remaining_stock = 2;
  string message = 3;
}
